# CMakeSuperBuild2

./: CMakeLists.txt  README.md
hello_galaxy/: CMakeLists.txt
hello_galaxy/cmake/: Config.cmake.in
hello_galaxy/include/hellogalaxy/: hello-galaxy.hpp
hello_galaxy/src/: hello-galaxy.cpp
tests/: CMakeLists.txt  test.cpp
